Revisão das entities/models